force-app/main/default/objects/DHS_TimeSheet__c/DHS_TimeSheet__c.object-meta.xml
<CustomObject>
    <label>TimeSheet</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>TimeSheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeSheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>