force-app/main/default/objects/DHS_TimeSheet__c/fields/Active_Hours__c.field-meta.xml
<CustomField>
    <fullName>Active_Hours__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Active_Seconds__c)) &amp;&amp; Active_Seconds__c &gt; 0,
    TEXT(FLOOR(Active_Seconds__c / 3600)) &amp; &quot; hour&quot; &amp; 
    IF(FLOOR(Active_Seconds__c / 3600) != 1, &quot;s&quot;, &quot;&quot;) &amp; &quot; &quot; &amp;
    TEXT(FLOOR(MOD(Active_Seconds__c, 3600) / 60)) &amp; &quot; minute&quot; &amp; 
    IF(FLOOR(MOD(Active_Seconds__c, 3600) / 60) != 1, &quot;s&quot;, &quot;&quot;) &amp; &quot; &quot; &amp;
    TEXT(MOD(Active_Seconds__c, 60)) &amp; &quot; second&quot; &amp; 
    IF(MOD(Active_Seconds__c, 60) != 1, &quot;s&quot;, &quot;&quot;),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Hours</label>
    <type>Text</type>
</CustomField>