force-app/main/default/objects/DHS_TimeSheet__c/fields/Active_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Active_Seconds__c</fullName>
    <label>Active Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>