force-app/main/default/objects/DHS_TimeSheet__c/fields/Active_Time_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Active_Time_Percentage__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Active_Seconds__c)),
        NOT(ISBLANK(Ideal_Seconds__c)),
        Active_Seconds__c + Ideal_Seconds__c != 0 
    ),
    Active_Seconds__c / (Active_Seconds__c + Ideal_Seconds__c),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Time Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>