force-app/main/default/objects/DHS_TimeSheet__c/fields/Associated_Leads__c.field-meta.xml
<CustomField>
    <fullName>Associated_Leads__c</fullName>
    <label>Associated Leads</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>