force-app/main/default/objects/DHS_TimeSheet__c/fields/CheckIn_Case_Materials_No_PII__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Case_Materials_No_PII__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CheckIn Case Materials No PII</label>
    <type>TextArea</type>
</CustomField>