force-app/main/default/objects/DHS_TimeSheet__c/fields/CheckIn_Comments__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Comments__c</fullName>
    <label>CheckIn Comments</label>
    <type>TextArea</type>
</CustomField>