force-app/main/default/objects/DHS_TimeSheet__c/fields/Checkout_Comments__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Comments__c</fullName>
    <label>Checkout Comments</label>
    <type>TextArea</type>
</CustomField>