force-app/main/default/objects/DHS_TimeSheet__c/fields/Day_Name__c.field-meta.xml
<CustomField>
    <fullName>Day_Name__c</fullName>
    <label>Day Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>