force-app/main/default/objects/DHS_TimeSheet__c/fields/Ideal_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Seconds__c</fullName>
    <label>Ideal Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>