force-app/main/default/objects/DHS_TimeSheet__c/fields/Last_Active_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Active_Time__c</fullName>
    <label>Last Active Time</label>
    <type>DateTime</type>
</CustomField>