force-app/main/default/objects/DHS_TimeSheet__c/fields/Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours__c</fullName>
    <label>Number of Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>