force-app/main/default/objects/DHS_TimeSheet__c/fields/Period_From__c.field-meta.xml
<CustomField>
    <fullName>Period_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period From</label>
    <type>Date</type>
</CustomField>