force-app/main/default/objects/DHS_TimeSheet__c/fields/Period_To__c.field-meta.xml
<CustomField>
    <fullName>Period_To__c</fullName>
    <label>Period To</label>
    <type>Date</type>
</CustomField>