force-app/main/default/objects/DHS_TimeSheet__c/fields/Time_Sheet_User__c.field-meta.xml
<CustomField>
    <fullName>Time_Sheet_User__c</fullName>
    <formula>DHS_User__r.FirstName+&apos; &apos;+DHS_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Sheet User</label>
    <type>Text</type>
</CustomField>