force-app/main/default/objects/DHS_TimeSheet__c/fields/Total_Logged_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Total_Logged_In_Seconds__c</fullName>
    <formula>Active_Seconds__c + Ideal_Seconds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Logged-In Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>