force-app/main/default/objects/DHS_TimeSheet__c/listViews/DHS_All.listView-meta.xml
<ListView>
    <fullName>DHS_All</fullName>
    <columns>NAME</columns>
    <columns>Ideal_Seconds__c</columns>
    <columns>Active_Seconds__c</columns>
    <columns>Active_Time_Percentage__c</columns>
    <columns>Idle_Time_Percentage__c</columns>
    <columns>DHS_User__c</columns>
    <columns>Date__c</columns>
    <columns>Miles_Driven__c</columns>
    <columns>Number_of_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>PMO</label>
</ListView>